# grpc-plugins-calculator-demo

./: Cargo.toml
plugins/adder/: Cargo.toml
plugins/adder/src/: main.rs
plugins/divide/: Cargo.toml
plugins/divide/src/: main.rs
plugins/modulo/: Cargo.toml
plugins/modulo/src/: main.rs
plugins/multiply/: Cargo.toml  build.rs
plugins/multiply/src/: main.rs
plugins/subtract/: Cargo.toml
plugins/subtract/src/: main.rs
proto/: calculator.proto
scripts/: run.sh
supervisor/: Cargo.toml  build.rs
supervisor/src/: main.rs
