[package]
name = "adder"
version = "0.1.0"
edition = "2024"

[dependencies]
prost = "0.14.1"
rand = "0.9.2"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros", "net", "fs"] }
tokio-stream = "0.1.17"
tonic = "0.14.1"
tonic-prost = "0.14.1"

[build-dependencies]
tonic-prost-build = "0.14.1"
